# python_machina_academy

./: .gitignore  1-uvod.ipynb  10-klase.ipynb  11+12-klase-napredno.ipynb  11-klase-kreiranje.ipynb  11-klase-napredno.ipynb  13-vizualno.ipynb  2-kontrola.ipynb  3-petlja-while.ipynb  4-petlja-for.ipynb  5-funkcije.ipynb  7-modul_os.ipynb  8-try-except.ipynb  9-read-write.ipynb  env  function_test_mypy.py  git_test  primjeri_i_zadaci.ipynb  pyproject.toml  qt-version.py  time_tracking.csv  todo.txt  zadaci.ipynb
demo_files/: edit_demo.docx  edit_demo.xlsx  write_demo.docx  write_demo.xlsx
notebooks/: Pyhton 5.ipynb  Python 10.ipynb  Python 2.ipynb  Python 3.ipynb  Python 6.ipynb  Python 7.ipynb  Python 8.ipynb  Python 8b.ipynb  Python 9.ipynb  pandas_nb.ipynb  python - 6.ipynb
plan/: 11+12-klase-napredno.ipynb  13-django.ipynb  13-tkinter.ipynb  2-kontrola.ipynb  7-modul_os_.ipynb  9-read-write.ipynb
