[tool.poetry]
name = "python-machina-academy"
version = "0.1.0"
description = ""
authors = ["Tomislav Nazifović <tomislav.nazifovic@gmail.com>"]
readme = "README.md"
packages = [{include = "python_machina_academy"}]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.14"
ipykernel = "^6.29.5"
python-docx = "^1.1.2"
pandas = "^2.2.3"
pypdf = "^5.0.1"
django = "^5.1.2"
pysimplegui = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
